[package]
name = "hacksquad-rust-twitter"
version = "0.1.0"
edition = "2021"
authors = ["Midka <me@midka.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.11.0", features = ["reqwest"]}
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
reqwest = {version = "0.11.0", features = ["json"]}
tokio = {version = "1.1.1", features = ["full"]}
anyhow = "1.0.39"
log = "^0.4"
